exports[`text > allow to enter text #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "to provide a robust synopsis for high level overviews.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply inline styles and links #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {
        "textAlignment": "left"
      },
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 17,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 17,
          "offset": 0,
          "style": "UNDERLINE"
        }
      ],
      "key": 2,
      "text": "#LIVING THE DREAM",
      "type": "code-block"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {
        "textAlignment": "left"
      },
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 10,
          "offset": 0
        },
        {
          "key": 2,
          "length": 30,
          "offset": 15
        },
        {
          "key": 3,
          "length": 65,
          "offset": 50
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 45,
          "offset": 0,
          "style": "UNDERLINE"
        },
        {
          "length": 65,
          "offset": 50,
          "style": "UNDERLINE"
        },
        {
          "length": 102,
          "offset": 201,
          "style": "UNDERLINE"
        },
        {
          "length": 78,
          "offset": 304,
          "style": "UNDERLINE"
        },
        {
          "length": 28,
          "offset": 383,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 20,
          "style": "ITALIC"
        },
        {
          "length": 102,
          "offset": 201,
          "style": "ITALIC"
        },
        {
          "length": 78,
          "offset": 304,
          "style": "ITALIC"
        },
        {
          "length": 28,
          "offset": 383,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 40,
          "style": "BOLD"
        },
        {
          "length": 100,
          "offset": 201,
          "style": "{\"FG\":\"color5\"}"
        },
        {
          "length": 2,
          "offset": 301,
          "style": "{\"FG\":\"color2\"}"
        },
        {
          "length": 78,
          "offset": 304,
          "style": "{\"FG\":\"color2\"}"
        },
        {
          "length": 149,
          "offset": 383,
          "style": "{\"FG\":\"color2\"}"
        }
      ],
      "key": 4,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. \nOrganically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.\nBring to the table win-win survival strategies to ensure proactive domination.\nAt the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "code-block"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 76,
          "offset": 0,
          "style": "{\"FG\":\"color2\"}"
        }
      ],
      "key": 6,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "url": "https://www.wix.com/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "1": {
      "data": {
        "url": "https://www.wix.com/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "2": {
      "data": {
        "url": "https://www.sport5.co.il/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "3": {
      "data": {
        "url": "https://www.one.co.il/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    }
  }
};

exports[`text > allow to create lists #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to enter hashtag with link #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 7,
          "offset": 9
        },
        {
          "key": 1,
          "length": 15,
          "offset": 37
        },
        {
          "key": 2,
          "length": 22,
          "offset": 53
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 7,
          "offset": 9,
          "style": "UNDERLINE"
        },
        {
          "length": 15,
          "offset": 37,
          "style": "UNDERLINE"
        },
        {
          "length": 22,
          "offset": 53,
          "style": "UNDERLINE"
        }
      ],
      "key": 0,
      "text": "#wix.com wix.com #this_is_not_a_link #will_be_a_link thisislink#youknow.com ",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "url": "wix.com"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "1": {
      "data": {
        "url": "https://www.wix.com/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "2": {
      "data": {
        "url": "thisislink#youknow.com"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    }
  }
};

exports[`text > allow to enter hashtag with link #1`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 13,
          "offset": 108
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 13,
          "offset": 108,
          "style": "UNDERLINE"
        }
      ],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.#wix.com",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 7,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 7,
          "offset": 0,
          "style": "UNDERLINE"
        }
      ],
      "key": 8,
      "text": "wix.com",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 19,
          "offset": 0,
          "style": "UNDERLINE"
        }
      ],
      "key": 9,
      "text": "#this_is_not_a_link",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "line.#wix.com"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    },
    "1": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "wix.com"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    }
  }
};

exports[`text > allow to enter text #1`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "to provide a robust synopsis for high level overviews.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply inline styles and links - isolated #0`] =
{
  "blocks": [
    {
      "data": {
        "textAlignment": "left"
      },
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "#LIVING THE DREAM",
      "type": "blockquote"
    },
    {
      "data": {
        "textAlignment": "left"
      },
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 10,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 20,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 40,
          "style": "BOLD"
        }
      ],
      "key": 1,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "blockquote"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > open link toolbar (InlinePluginToolbar) #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to enter tab character #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "\tHow to eat healthy is a good question.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to create link and open link toolbar (InlinePluginToolbar) #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 10,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 10,
          "offset": 0,
          "style": "UNDERLINE"
        }
      ],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://www.wix.com/"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    }
  }
};

exports[`text > should paste plain text #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "This is pasted text",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply indent #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 4,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 10,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 20,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 40,
          "style": "BOLD"
        }
      ],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply indent on a single block with inline styling #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 4,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 10,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 20,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 40,
          "style": "BOLD"
        }
      ],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply indent on multiple text blocks #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "Check if the list above displays correctly!",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > allow to apply indent only on text blocks #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.\n",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 3,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_92b217c36c98400a82e5c59bf131d957.jpg",
          "height": 1068,
          "id": "2f64886b1998251a4a5e47d25fff5ffa",
          "original_file_name": "8bb438_92b217c36c98400a82e5c59bf131d957.jpg",
          "width": 1600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`text > allow to enter tab character and delete it using shift+tab #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Text should not include tab.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > indentation > allow to apply indent on a single block with inline styling #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 4,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 5,
          "offset": 10,
          "style": "UNDERLINE"
        },
        {
          "length": 5,
          "offset": 20,
          "style": "ITALIC"
        },
        {
          "length": 5,
          "offset": 30,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 40,
          "style": "BOLD"
        }
      ],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "User generated content in real-time will have multiple touchpoints for offshoring.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > indentation > allow to apply indent on multiple text blocks #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "Check if the list above displays correctly!",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > indentation > allow to apply indent only on text blocks #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.\n",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 3,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 3,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content"
        },
        "src": {
          "file_name": "8bb438_92b217c36c98400a82e5c59bf131d957.jpg",
          "height": 1068,
          "id": "2f64886b1998251a4a5e47d25fff5ffa",
          "original_file_name": "8bb438_92b217c36c98400a82e5c59bf131d957.jpg",
          "width": 1600
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`text > indentation > allow to apply indent and delete it when clicking backspace where cursor is at start of block #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 1,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Text should have depth 1.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > indentation > allow to apply indent when clicking tab/shift+tab on selected block #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Text should not include indentation.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > Enter click should create new block with the same alignment #0`] =
{
  "blocks": [
    {
      "data": {
        "textAlignment": "center"
      },
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 33,
          "offset": 0,
          "style": "BOLD"
        }
      ],
      "key": 0,
      "text": "Hey, next line should be centered",
      "type": "unstyled"
    },
    {
      "data": {
        "textAlignment": "center"
      },
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "I am centered!!",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};

exports[`text > should paste html correctly #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 11,
          "offset": 7
        }
      ],
      "inlineStyleRanges": [
        {
          "length": 7,
          "offset": 0,
          "style": "{\"FG\":\"#202122\"}"
        },
        {
          "length": 2,
          "offset": 18,
          "style": "{\"FG\":\"#202122\"}"
        },
        {
          "length": 7,
          "offset": 0,
          "style": "{\"BG\":\"#ffffff\"}"
        },
        {
          "length": 2,
          "offset": 18,
          "style": "{\"BG\":\"#ffffff\"}"
        }
      ],
      "key": 0,
      "text": "called anchor text. ",
      "type": "unstyled"
    }
  ],
  "entityMap": {
    "0": {
      "data": {
        "rel": "noopener",
        "target": "_blank",
        "url": "https://en.wikipedia.org/wiki/Anchor_text"
      },
      "mutability": "MUTABLE",
      "type": "LINK"
    }
  }
};

exports[`text > esc key event should make editor blurred #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Magic! I am blurred.",
      "type": "unstyled"
    }
  ],
  "entityMap": {}
};
